force-app/main/default/objects/ARTL_MSU_Matrix__c/ARTL_MSU_Matrix__c.object-meta.xml
<CustomObject>
    <label>MSU Matrix</label>
    <nameField>
        <displayFormat>MSU-{0000}</displayFormat>
        <label>MSU Matrix No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSU Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>