force-app/main/default/objects/ARTL_MSU_Matrix__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <label>Circle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>