force-app/main/default/objects/ARTL_MSU_Matrix__c/fields/MSUCode__c.field-meta.xml
<CustomField>
    <fullName>MSUCode__c</fullName>
    <label>MSU Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>