force-app/main/default/objects/ARTL_MSU_Matrix__c/fields/NetworkCity__c.field-meta.xml
<CustomField>
    <fullName>NetworkCity__c</fullName>
    <label>Network City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>