force-app/main/default/objects/ARTL_MSU_Matrix__c/fields/RSUCode__c.field-meta.xml
<CustomField>
    <fullName>RSUCode__c</fullName>
    <label>RSU Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>