force-app/main/default/objects/ARTL_MSU_Matrix__c/fields/RSUIdentifier__c.field-meta.xml
<CustomField>
    <fullName>RSUIdentifier__c</fullName>
    <label>RSU Identifier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>