force-app/main/default/objects/ARTL_MSU_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MSUCode__c</columns>
    <columns>NetworkCity__c</columns>
    <columns>Circle__c</columns>
    <columns>RSUIdentifier__c</columns>
    <columns>RSUCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>